# StarrieOS

./: README.md
.github/workflows/: build.yml
base/setup/usetup/lang/: en-US.h
boot/bootdata/: bootcd.ini
boot/bootdata/bootcd/: unattend.inf
dll/ntdll/nt_0600/: ntdll_vista.h
dll/win32/imagehlp/: access.c  integrity.c
dll/win32/msxml3/: xslpattern.h
dll/win32/oleaut32/: vartype.c
media/themes/: CMakeLists.txt
media/themes/Holo/: CMakeLists.txt
media/themes/Holo/holo.msstyles/: DesignConcept.md
media/themes/Holo/holo.msstyles/lang/: en-US.rc
media/themes/HoloV2/: CMakeLists.txt
media/themes/HoloV2/holoii.msstyles/: CMakeLists.txt  holoii.rc
media/themes/HoloV2/holoii.msstyles/lang/: en-US.rc
modules/rostests/winetests/msvcrtd/: debug.c
modules/rostests/winetests/ntdll/: change.c
modules/wallpapers/: CMakeLists.txt
modules/wallpapers/HoloV2/: CMakeLists.txt
sdk/cmake/: CMakeMacros.cmake
sdk/include/psdk/: windef.h  winresrc.h
sdk/include/reactos/: version.cmake
sdk/include/reactos/mc/: bugcodes.mc
sdk/include/xdk/: CMakeLists.txt
sdk/lib/crt/except/amd64/: ehandler.c
win32ss/user/ntuser/: desktop.c
